--- a/second_page.html
+++ b/second_page.html
@@ -35,7 +35,7 @@
         <div class="flex flex-row justify-between items-center font-sans container h-[96px] md:px-[100px] sm:px-[40px] px-[32px]">
             <img class="sm:hidden flex" src="./images/togler.svg" alt="">
             <div class="flex flex-row items-center gap-x-[60px]">
-                <a href="http://127.0.0.1:5500/index.html"><img src="./images/scoot_logo.svg" alt=""></a>
+                <a href="index.html"><img src="./images/scoot_logo.svg" alt=""></a>
                 <ul class="hidden sm:flex flex-row gap-x-[32px] text-mid_gray text-[15px] font-bold leading-[25px]">
                     <a class=" hover:text-yellow" href="second_page.html"><li>About</li></a>
                     <a class=" hover:text-yellow" href="fourth_page.html"><li>Location</li></a>
