--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="flex flex-row items-center gap-x-[10px] sm:gap-x-[20px]">
                 
-                <a href="">
+                <a href="https://www.apple.com/app-store/">
                     <div class="flex flex-row gap-x-[10px] items-center bg-slate-200 rounded py-[8px] px-[15px] cursor-pointer">
                         <img src="./images/logo_apple.png" alt="">
                         <div class="flex flex-col">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="">
+                <a href="https://play.google.com/store/games?device=windows/">
                     <div class="flex flex-row gap-x-[10px] items-center bg-slate-200 rounded py-[8px] px-[15px] cursor-pointer">
                         <img src="./images/logo_chrom.png" alt="">
                         <div class="flex flex-col">
