--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://play.google.com/store/games?device=windows/">
+                <a href="https://play.google.com/store/games?device=windows">
                     <div class="flex flex-row gap-x-[10px] items-center bg-slate-200 rounded py-[8px] px-[15px] cursor-pointer">
                         <img src="./images/logo_chrom.png" alt="">
                         <div class="flex flex-col">
